# docs/swagger.json
@@ -42,22 +42,28 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "OK"
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/api.Response"
+                        }
                     },
                     "400": {
-                        "description": "Bad Request"
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/api.ErrorResponse"
+                        }
                     },
                     "401": {
                         "description": "User email is not verified",
                         "schema": {
-                            "type": "nil"
+                            "$ref": "#/definitions/api.ErrorResponse"
                         }
                     },
                     "404": {
-                        "description": "Not Found"
-                    },
-                    "502": {
-                        "description": "Bad Gateway"
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/api.ErrorResponse"
+                        }
                     }
                 }
             }
@@ -89,14 +95,20 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/userDTO.TokenResponse"
+                            "$ref": "#/definitions/api.SuccessResponse-userDTO_TokenResponse"
                         }
                     },
                     "400": {
-                        "description": "Bad Request"
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/api.ErrorResponse"
+                        }
                     },
                     "422": {
-                        "description": "Unprocessable Entity"
+                        "description": "Unprocessable Entity",
+                        "schema": {
+                            "$ref": "#/definitions/api.ErrorResponse"
+                        }
                     }
                 }
             }
@@ -115,13 +127,22 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "OK"
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/api.Response"
+                        }
                     },
                     "403": {
-                        "description": "Forbidden"
+                        "description": "Forbidden",
+                        "schema": {
+                            "$ref": "#/definitions/api.ErrorResponse"
+                        }
                     },
-                    "502": {
-                        "description": "Bad Gateway"
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/api.ErrorResponse"
+                        }
                     }
                 }
             }
@@ -139,17 +160,26 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/userDTO.TokenResponse"
+                            "$ref": "#/definitions/api.SuccessResponse-userDTO_TokenResponse"
                         }
                     },
                     "403": {
-                        "description": "Forbidden"
+                        "description": "Forbidden",
+                        "schema": {
+                            "$ref": "#/definitions/api.ErrorResponse"
+                        }
                     },
                     "422": {
-                        "description": "Unprocessable Entity"
+                        "description": "Unprocessable Entity",
+                        "schema": {
+                            "$ref": "#/definitions/api.ErrorResponse"
+                        }
                     },
-                    "502": {
-                        "description": "Bad Gateway"
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/api.ErrorResponse"
+                        }
                     }
                 }
             }
@@ -179,16 +209,34 @@
                 ],
                 "responses": {
                     "201": {
-                        "description": "Created"
+                        "description": "Created",
+                        "schema": {
+                            "$ref": "#/definitions/api.SuccessResponse-userDTO_UserResponseDTO"
+                        }
                     },
                     "400": {
-                        "description": "Bad Request"
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/api.ErrorResponse"
+                        }
                     },
                     "409": {
-                        "description": "Conflict"
+                        "description": "Conflict",
+                        "schema": {
+                            "$ref": "#/definitions/api.ErrorResponse"
+                        }
                     },
-                    "502": {
-                        "description": "Bad Gateway"
+                    "422": {
+                        "description": "Unprocessable Entity",
+                        "schema": {
+                            "$ref": "#/definitions/api.ErrorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/api.ErrorResponse"
+                        }
                     }
                 }
             }
@@ -225,13 +273,22 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "OK"
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/api.Response"
+                        }
                     },
                     "400": {
-                        "description": "Bad Request"
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/api.ErrorResponse"
+                        }
                     },
-                    "502": {
-                        "description": "Bad Gateway"
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/api.ErrorResponse"
+                        }
                     }
                 }
             }
@@ -256,13 +313,22 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "OK"
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/api.Response"
+                        }
                     },
                     "400": {
-                        "description": "Bad Request"
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/api.ErrorResponse"
+                        }
                     },
                     "409": {
-                        "description": "Conflict"
+                        "description": "Conflict",
+                        "schema": {
+                            "$ref": "#/definitions/api.ErrorResponse"
+                        }
                     }
                 }
             }
@@ -289,11 +355,11 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/DTO.DefaultResponse-array_userDTO_UserResponseDTO"
+                            "$ref": "#/definitions/api.SuccessResponse-userDTO_UsersResponse"
                         }
                     },
-                    "502": {
-                        "description": "Bad Gateway"
+                    "500": {
+                        "description": "Internal Server Error"
                     }
                 }
             },
@@ -318,8 +384,8 @@
                     "200": {
                         "description": "OK"
                     },
-                    "502": {
-                        "description": "Bad Gateway"
+                    "500": {
+                        "description": "Internal Server Error"
                     }
                 }
             }
@@ -337,7 +403,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/DTO.DefaultResponse-userDTO_UserResponseDTO"
+                            "$ref": "#/definitions/api.SuccessResponse-userDTO_UserResponseDTO"
                         }
                     },
                     "401": {
@@ -348,13 +414,27 @@
         }
     },
     "definitions": {
-        "DTO.DefaultResponse-array_userDTO_UserResponseDTO": {
+        "api.Error": {
             "type": "object",
             "properties": {
-                "data": {
+                "code": {
+                    "type": "string"
+                },
+                "message": {
+                    "type": "string"
+                },
+                "parameter": {
+                    "type": "string"
+                }
+            }
+        },
+        "api.ErrorResponse": {
+            "type": "object",
+            "properties": {
+                "error": {
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/userDTO.UserResponseDTO"
+                        "$ref": "#/definitions/api.Error"
                     }
                 },
                 "status": {
@@ -362,11 +442,53 @@
                 }
             }
         },
-        "DTO.DefaultResponse-userDTO_UserResponseDTO": {
+        "api.Response": {
+            "type": "object",
+            "properties": {
+                "message": {
+                    "type": "string"
+                },
+                "status": {
+                    "type": "string"
+                }
+            }
+        },
+        "api.SuccessResponse-userDTO_TokenResponse": {
+            "type": "object",
+            "properties": {
+                "data": {
+                    "$ref": "#/definitions/userDTO.TokenResponse"
+                },
+                "message": {
+                    "type": "string"
+                },
+                "status": {
+                    "type": "string"
+                }
+            }
+        },
+        "api.SuccessResponse-userDTO_UserResponseDTO": {
             "type": "object",
             "properties": {
                 "data": {
                     "$ref": "#/definitions/userDTO.UserResponseDTO"
+                },
+                "message": {
+                    "type": "string"
+                },
+                "status": {
+                    "type": "string"
+                }
+            }
+        },
+        "api.SuccessResponse-userDTO_UsersResponse": {
+            "type": "object",
+            "properties": {
+                "data": {
+                    "$ref": "#/definitions/userDTO.UsersResponse"
+                },
+                "message": {
+                    "type": "string"
                 },
                 "status": {
                     "type": "string"
@@ -387,14 +509,14 @@
         "userDTO.ResetPasswordInput": {
             "type": "object",
             "required": [
-                "confirm_password",
-                "password"
+                "password",
+                "password_confirm"
             ],
             "properties": {
-                "confirm_password": {
+                "password": {
                     "type": "string"
                 },
-                "password": {
+                "password_confirm": {
                     "type": "string"
                 }
             }
@@ -442,9 +564,6 @@
             "properties": {
                 "access_token": {
                     "type": "string"
-                },
-                "status": {
-                    "type": "string"
                 }
             }
         },
@@ -470,6 +589,17 @@
             "properties": {
                 "user": {
                     "$ref": "#/definitions/userDTO.UserResponse"
+                }
+            }
+        },
+        "userDTO.UsersResponse": {
+            "type": "object",
+            "properties": {
+                "users": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/userDTO.UserResponse"
+                    }
                 }
             }
         }
